--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "server": "tsx server.ts",
+    "server": "tsx server/index.ts",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
